2000-01-26  Larry Jones  <larry.jones@sdrc.com>

	* run.c (run_exec): Conditionalize K.J.'s change so that it only
	applies when SETXID_SUPPORT is defined since some platforms don't
	have setegid().

2000-01-26  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Make TESTDIR earlier then use it to check for versions
	of expr that don't work right with long expressions.

	* sanity.sh (dotest_line_by_line): Have wc read from stdin so it
	doesn't output the file name and confuse expr.  Make the output a
	bit less verbose and easier to read.

2000-01-24  K.J. Paradise <kj@sourcegear.com>

	* run.c :> prevents a user from creating a privileged shell from the 
	text editor when the SETXID_SUPPORT option is selected.  This came from 
	Bob Colle <bcolle@ilx.com>, and is his completely. 

2000-01-22  Jim Kingdon  <http://developer.redhat.com/>

	* sanity.sh (emptydir): Add a case in which one might hope for a
	non-Emptydir result, but which result?

2000-01-18  Larry Jones  <larry.jones@sdrc.com>

	* main.c (main): Allow -z0 to disable gzip compression.

2000-01-17  Larry Jones  <larry.jones@sdrc.com> for
	K.J. Paradise (kj@sourcegear.com)

	* version.c: Push version number to 1.10.8.1.

	* version.c: Version 1.10.8.

2000-01-17  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (init): Create CVSROOT/Emptydir to avoid problems
	with users not having sufficient permissions to create it later.

2000-01-04  Larry Jones  <larry.jones@sdrc.com>

	* client.c (get_responses_and_close): Simplify time-stamp race
	avoidance code.
	* commit.c (commit): Ditto.
	* update.c (do_update): Ditto.
	(Prompted by patch submitted by Pavel Roskin
	<pavel_roskin@geocities.com>.)

	* hardlink.c: sizeof (char) is 1, by definition.
	* logmsg.c: Ditto.
	* rcs.c: Ditto.

2000-01-03  Karl Fogel  <kfogel@red-bean.com>

	* filesubr.c, subr.c (backup_file): moved this function from
	filesubr.c to subr.c, at JimK's suggestion.

2000-01-03  Jim Kingdon  <http://developer.redhat.com/>
