@@ -414,9 +414,9 @@ ignore_files (ilist, entries, update_dir, proc)
     {
 	file = dp->d_name;
 	if (strcmp (file, ".") == 0 || strcmp (file, "..") == 0)
-	    continue;
+	    goto continue_loop;
 	if (findnode_fn (ilist, file) != NULL)
-	    continue;
+	    goto continue_loop;
 	if (subdirs)
 	{
 	    Node *node;
@@ -437,14 +437,14 @@ ignore_files (ilist, entries, update_dir, proc)
 		dir = isdir (p);
 		free (p);
 		if (dir)
-		    continue;
+		    goto continue_loop;
 	    }
 	}
 
 	/* We could be ignoring FIFOs and other files which are neither
 	   regular files nor directories here.  */
 	if (ign_name (file))
-	    continue;
+	    goto continue_loop;
 
 	if (
 #ifdef DT_DIR
@@ -471,7 +471,7 @@ ignore_files (ilist, entries, update_dir, proc)
 		    if (isdir (temp))
 		    {
 			free (temp);
-			continue;
+			goto continue_loop;
 		    }
 		    free (temp);
 		}
@@ -486,12 +486,13 @@ ignore_files (ilist, entries, update_dir, proc)
 #endif
 		     )
 	    {
-		continue;
+		goto continue_loop;
 	    }
 #endif
     	}
 
 	(*proc) (file, xdir);
+    continue_loop:
 	errno = 0;
     }
     if (errno != 0)
